# taichi-aot-demo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  tutorial.md  x.py
.github/workflows/: taichi-pr.yml  test.yml
0_tutorial/: CMakeLists.txt  app.cpp
0_tutorial_cgraph/: CMakeLists.txt  app.cpp
0_tutorial_cgraph/assets/: tutorial.py
0_tutorial_kernel/: CMakeLists.txt  app.cpp
0_tutorial_kernel/assets/: tutorial.py
1_hello_world/: CMakeLists.txt  app.cpp
1_hello_world_with_cpu_interop/: CMakeLists.txt  app.cpp
1_hello_world_with_cuda_interop/: CMakeLists.txt  app.cpp
1_hello_world_with_interop/: CMakeLists.txt  app.cpp
2_mpm88/: CMakeLists.txt  app.cpp
2_mpm88/assets/: mpm88.py
2_mpm88/assets/mpm88/: graphs.tcb  init_particles_c84_0_k0000_vk_0_t00.spv  metadata.json  metadata.tcb  substep_g2p_c82_0_k0005_vk_0_t00.spv  substep_p2g_c78_0_k0002_vk_0_t00.spv  substep_reset_grid_c76_0_k0001_vk_0_t00.spv  substep_update_grid_v_c80_0_k0004_vk_0_t00.spv
3_implicit_fem/: CMakeLists.txt  app.cpp
3_implicit_fem/assets/: implicit_fem.py
4_sph/: CMakeLists.txt  app.cpp
4_sph/assets/: sph.py
4_texture_fractal/: CMakeLists.txt  app.cpp
4_texture_fractal/assets/: fractal.py
5_sph/: CMakeLists.txt  app.cpp
5_sph/assets/: sph.py
5_taichi_sparse/: CMakeLists.txt  app.cpp
5_taichi_sparse/assets/: taichi_sparse.py
6_taichi_sparse/: CMakeLists.txt  app.cpp
6_taichi_sparse/assets/: taichi_sparse.py
7_comet/: CMakeLists.txt  app.cpp
7_comet/assets/: comet.py
android/: .gitattributes  build.gradle
ci/: build_and_test_linux.sh  requirements.txt  run_demos.sh  run_tests.py  test_config.json  test_utils.sh
cmake/: demo.cmake  env.cmake
comet/: CMakeLists.txt  README.md  comet.cpp  comet.py  linux_compile_and_run.sh
desktop/: CMakeLists.txt  implicit_fem.cpp
framework/: CMakeLists.txt  README.md
framework/android/: .gitignore  LICENSE.md
framework/android/app/: build.gradle
framework/android/app/src/main/: AndroidManifest.xml
framework/include/taichi/: aot_demo_framework.hpp
framework/include/taichi/aot_demo/: asset_manager.hpp  common.hpp  framework.hpp  graphics_runtime.hpp  graphics_task.hpp  interop.hpp  renderer.hpp  shadow_buffer.hpp  shadow_texture.hpp
framework/include/taichi/aot_demo/draws/: draw_mesh.hpp  draw_particles.hpp  draw_points.hpp  draw_texture.hpp
framework/include/taichi/aot_demo/interop/: cross_device_copy.hpp  texture_utils.hpp
framework/include/taichi/aot_demo/vulkan/: vulkan_graphics_runtime.hpp  vulkan_graphics_task.hpp  vulkan_renderer.hpp
framework/include/taichi/aot_demo/vulkan/interop/: common_utils.hpp  copy_memory_to_vulkan.hpp  cross_device_copy.hpp  texture_utils.hpp
framework/src/taichi/: renderer.cpp
framework/src/taichi/aot_demo/: framework.cpp  glslang.cpp  graphics_runtime.cpp  graphics_task.cpp  renderer.cpp  shadow_buffer.cpp  shadow_texture.cpp  vmaimpl.cpp
framework/src/taichi/aot_demo/draws/: draw_mesh.cpp  draw_particles.cpp  draw_points.cpp  draw_texture.cpp
framework/src/taichi/aot_demo/entry_points/: android.cpp  android_impl.c  glfw.cpp  headless.cpp
framework/src/taichi/aot_demo/interop/: common_utils.cpp  cross_device_copy.cpp  texture_utils.cpp
framework/src/taichi/aot_demo/metal/entry_points/: macos.mm
framework/src/taichi/aot_demo/vulkan/: renderer.cpp  vulkan_graphics_task.cpp  vulkan_renderer.cpp
framework/src/taichi/aot_demo/vulkan/draws/: draw_mesh.cpp  draw_points.cpp
framework/src/taichi/aot_demo/vulkan/entry_points/: android.cpp
framework/src/taichi/aot_demo/vulkan/interop/: common_utils.cpp  copy_memory_to_vulkan.cpp  cross_device_copy.cpp  texture_utils.cpp
framework/src/taichi/entry_points/: windows.cpp
implicit_fem/: README.md  bake_cornell_box.py
implicit_fem/android/: .gitignore  build.gradle
implicit_fem/android/app/src/main/cpp/: CMakeLists.txt  implicit_fem.cpp
implicit_fem/desktop/: .gitignore  CMakeLists.txt  implicit_fem.cpp
implicit_fem/include/: box_color_data.h  box_data.h  fem_app.h
implicit_fem/python/: .gitignore  bake_cornell_box.py  edges_np.npy  implicit_fem.py  ox_np.npy  vertices_np.npy
include/: fem_app.h  mesh_data.h
legacy_demos/nbody_ndarray/: nbody.py
mpm88_android/: README.md
mpm88_android/app/src/main/cpp/: CMakeLists.txt  main.cpp
mpm88_desktop/: CMakeLists.txt  README.md  linux_compile_and_run.sh  mpm88.cpp  mpm88.hpp  mpm88.py
mpm88_desktop/shaders/: graphs.tcb  init_particles_c64_0_k0000_vk_0_t00.spv  init_particles_c66_0_k0005_vk_0_t00.spv  metadata.json  metadata.tcb  substep_g2p_c62_0_k0005_vk_0_t00.spv  substep_g2p_c62_0_k0006_vk_0_t00.spv  substep_g2p_c64_0_k0011_vk_0_t00.spv  substep_p2g_c58_0_k0002_vk_0_t00.spv  substep_p2g_c58_0_k0003_vk_0_t00.spv  substep_reset_grid_c56_0_k0001_vk_0_t00.spv  substep_reset_grid_c58_0_k0006_vk_0_t00.spv  substep_update_grid_v_c60_0_k0004_vk_0_t00.spv  substep_update_grid_v_c60_0_k0005_vk_0_t00.spv
nbody_ndarray/: nbody.py
nbody_ndarray/java_runtime/: MainActivity.java  NbodyNdarray.java
nbody_ndarray/res/: compute_force_c46_00.glsl  initialize_c44_01.glsl  metadata.json
python/: c2e.npy  implicit_fem.py  indices_np.npy
scripts/: build-android-app.sh  build-android.sh
shaders/render/: Makefile  box.frag  box.frag.spv  surface.frag  surface.vert
sph/: .gitignore  CMakeLists.txt  README.md  linux_compile_and_run.sh  sph.cpp  sph.py
taichi_sparse/: CMakeLists.txt  linux_compile_and_run.sh  taichi_sparse.cpp  taichi_sparse.py
test/: CMakeLists.txt  linux_compile_and_run.sh  test.cpp  test.py
test/models/taichi_aot/: graphs.tcb  metadata.json  metadata.tcb  taichi_add_c76_0_k0001_vk_0_t00.spv
texture/desktop/: CMakeLists.txt  texture.cpp  texture.hpp  texture_graph.py
texture/desktop/shaders/: graphs.tcb  make_texture_c56_0_k0004_vk_0_t00.spv  make_texture_c60_0_k0004_vk_0_t00.spv  make_texture_c76_0_k0004_vk_0_t00.spv  metadata.json  metadata.tcb  paint_c58_0_k0005_vk_0_t00.spv  paint_c58_0_k0006_vk_0_t00.spv  paint_c62_0_k0005_vk_0_t00.spv  paint_c62_0_k0006_vk_0_t00.spv  paint_c78_0_k0006_vk_0_t00.spv
(+177 files in other folders)
