set(TAICHI_TUTORIAL_DEMO_NAME "E0_tutorial_kernel")
message("-- Building ${TAICHI_TUTORIAL_DEMO_NAME}")

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
find_package(taichi REQUIRED)

list(APPEND TAICHI_TUTORIAL_DEMO_SRC
  ${CMAKE_CURRENT_SOURCE_DIR}/app.cpp
)
if (NOT ANDROID)
  list(APPEND TAICHI_TUTORIAL_DEMO_SRC
    ${BACKWARD_ENABLE}
  )
endif()

add_executable(${TAICHI_TUTORIAL_DEMO_NAME} ${TAICHI_TUTORIAL_DEMO_SRC})
target_link_libraries(${TAICHI_TUTORIAL_DEMO_NAME} PUBLIC taichi::runtime)
set_target_properties(${TAICHI_TUTORIAL_DEMO_NAME} PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tutorial
  RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/tutorial
  RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/tutorial)

if (ANDROID)
  target_link_libraries(${TAICHI_TUTORIAL_DEMO_NAME} android log)
else()
  add_backward(${TAICHI_TUTORIAL_DEMO_NAME})
endif()

execute_process(COMMAND ${PYTHON_EXECUTABLE} "${CMAKE_CURRENT_SOURCE_DIR}/assets/tutorial.py" --arch vulkan --aot)
